add questionniare controller and yaml
